--- a/Week 2/css/w2style.css
+++ b/Week 2/css/w2style.css
@@ -1,5 +1,7 @@
 body {
 	font-family:  sans-serif;
+	background: url("../images/background.jpg");
+	background-size: cover;
 }
 .content {
 	text-align: center;
