Edited Week 2 and Week 3 files with completed homework assignments.

--- a/Week3/css/week3.css
+++ b/Week3/css/week3.css
@@ -128,3 +128,9 @@ select, option {
 .button.guess {
   background-color: #6cc0ac;
 }
+.button.reset {
+  background-color: #0066ff;
+}
+.button.show {
+  background-color: #cc9900;
+}
